welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: type YELLOW is not a member of object java.awt.Color
    case 1 => setCouleurBrosse(): Color.YELLOW
                                        ^MethodsPicture:24: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
    case 1 => setCouleurBrosse(): Color.YELLOW
                              ^MethodsPicture:25: error: type RED is not a member of object java.awt.Color
    case 2 => setCouleurBrosse(): Color.RED
                                        ^MethodsPicture:25: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
    case 2 => setCouleurBrosse(): Color.RED
                              ^MethodsPicture:26: error: type BLUE is not a member of object java.awt.Color
    case 3 => setCouleurBrosse(): Color.BLUE
                                        ^MethodsPicture:26: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
    case 3 => setCouleurBrosse(): Color.BLUE
                              ^MethodsPicture:27: error: type GREEN is not a member of object java.awt.Color
    case 4 => setCouleurBrosse(): Color.GREEN
                                        ^MethodsPicture:27: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
    case 4 => setCouleurBrosse(): Color.GREEN
                              ^