welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  
  for (j <- 1 to 3){
    faireLigne()
  }
  
  
  
}


def faireLigne(){
  for (j <- 1 to  3){faire4V(); avance(7)  }
  gauche(); avance(7); droite()
  
}

def faire4V() {
  for (i <- 1 to 4){faireV(i)}
}

def faireV(x:Int) {
  x match {
    case 1 => setCouleurBrosse(): Color.YELLOW
    case 2 => setCouleurBrosse(): Color.RED
    case 3 => setCouleurBrosse(): Color.BLUE
    case 4 => setCouleurBrosse(): Color.GREEN
  }
  avance(2)
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance(2)
  gauche()
}